style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: "Lato", sans-serif;
  min-height: 100vh;
  color: #fff;
  background: rgba(1, 109, 55, 0.4);
  /* background: rgba(1, 109, 55, 0.3); --- for airpods */
  /* background: rgba(56, 2, 40, 0.267); --- for watch */
  /* background: rgba(56, 3, 87, 0.3); --- for beats */
  transition: background 0.5s cubic-bezier(0.19, 1, 0.22, 1);
}

.container {
  height: 100vh;
  overflow: hidden;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5rem;
}

.slider-box {
  width: 40%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: center;
}

.heading {
  font-size: 2.6rem;
  margin-bottom: 0.5rem;
  will-change: transform;
  opacity: 1;
}

.price {
  font-size: 1.2rem;
  will-change: transform;
}

.slide-img {
  max-width: 100%;
  height: 60%;
  cursor: grab;
  object-fit: cover;
  user-select: none;
  will-change: transform;
  transform: translateX(0);
  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
}

.buy-btn {
  align-self: center;
  width: 10rem;
  height: 3rem;
  justify-self: center;
  cursor: pointer;
  color: #fff;
  outline: none;
  padding: 0.5rem;
  font-size: 1.1rem;
  letter-spacing: 0.2px;
  border-radius: 10px;
  background: transparent;
  border: 2px solid #fff;
  will-change: transform;
  transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.buy-btn:hover {
  background-color: #fff;
  color: rgb(82, 82, 82);
}

@media screen and (min-width: 650px) and (max-width: 850px) {
  .slider-box {
    width: 60%;
  }
  .slide-img {
    height: 50%;
    user-select: none;
  }
}

@media screen and (max-width: 649px) {
  body {
    height: 100vh;
    width: 100vw;
  }
  .container {
    height: 100%;
    width: 100%;
    overflow: hidden;
    padding: 2rem;
  }
  .slider-box {
    width: 100%;
  }
  .heading {
    margin-top: 2rem;
    font-size: 2.2rem;
  }
  .slide-img {
    height: 45%;
    user-select: none;
  }
  .buy-btn {
    width: 8.5rem;
    height: 2.8rem;
    font-size: 1.1rem;
    margin-bottom: 2rem;
  }
}

